--- a/index.html
+++ b/index.html
@@ -100,6 +100,6 @@
     <button id="readValuesButton">Set properties</button>
 
     <canvas id="canvas"></canvas>
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Change this to script.js when you download (optional) -->
 </body>
 </html>
