--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SquaRena V0.9</title>
+    <title>SquaRena V1.0.9</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow-y: scroll;
             height: 100%;
             width: 100%;
             background-color: black;
         }
-
         h1 {
             text-align: left; 
             margin: 20px;  
@@ -40,6 +39,42 @@
         button {
             font-size: 16px;
             cursor: pointer;
+        }
+        .scrollable-container {
+            height: 80vh; 
+            overflow-y: auto;
+            padding: 20px;
+            background-color: #ffffff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        body::-webkit-scrollbar {
+            width: 0;
+            height: 0;
+        }
+
+        body:hover::-webkit-scrollbar {
+            width: 12px;
+            height: 12px;
+        }
+
+        body:hover::-webkit-scrollbar-track {
+            background: #2e2e2e; 
+        }
+
+        body:hover::-webkit-scrollbar-thumb {
+            background-color: #4d4d4d; 
+            border-radius: 6px;
+            border: 3px solid #2e2e2e; 
+        }
+
+        body:hover::-webkit-scrollbar-thumb:hover {
+            background-color: #3b3b3b; 
+        }
+
+        .content {
+            height: 150%;
+            background-color: #e0e0e0;
         }
     </style>
 </head>
@@ -69,8 +104,6 @@
         <option value="6">Purple</option>
       </select>
 
-
-
     <div class="slider-container">
         <label for="speedSlider">Player Speed:</label>
         <input type="range" id="speedSlider" min="1" max="10" value="5">
@@ -82,6 +115,12 @@
         <input type="range" id="sizeSlider" min="50" max="150" value="100">
         <span id="sizeValue">100</span>
     </div> 
+
+    <div class="slider-container">
+        <label for="spawnSlider">Spawn rates:</label>
+        <input type="range" id="spawnSlider" min="0.1" max="2" value="1" step="0.1">
+        <span id="spawnValue">1</span>
+    </div>
 
     <input type="checkbox" id="healon" name="heal?" value="true" checked>
     <label for="healon"> Heals</label>
@@ -96,6 +135,13 @@
     <label for="slwon"> Slow downs</label> 
 
     <br>
+
+    <label for="sound">Hit sound:</label>
+    <select name="Sound" id="sound">
+        <option value="1">Hit 1</option>
+        <option value="2">Hit 2</option>
+        <option value="0">None</option>
+    </select>
 
     <button id="readValuesButton">Set properties</button>
 
